# OpenGL-VEnvironment

./: .clangd  .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  Plantilla_OpenGL.cpp  app  compilar_y_correr.bat  compile_commands.json  readme.md
.cache/clangd/index/: glad.c.77C60E36477CB28E.idx  glad.h.5B7A37EECC797524.idx  khrplatform.h.825304B932543CF3.idx  main.c.CAED6ED5BA9BCD07.idx
Header-Files/: EBO.h  VAO.h  VBO.h  shaderClass.h
include/: Shader.h
include/glad/: glad.h
src/: EBO.cpp  VBO.cpp  glad.c  main.cpp  shaderClass.cpp
src/shaders/: fragmentshaders.glsl
